# ai_review_orchestrator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  GETTING_STARTED.md  LICENSE  README.md  plan.md  pyproject.toml  pyrightconfig.json  reqs.md
.github/agents/: aidor-coder.md  aidor-reviewer.md
.github/hooks/: aidor.json
.github/workflows/: ci.yml
.serena/: project.yml
scripts/: precommit_shim.py
src/aidor/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  guard_profile.py  hook_resolver.py  model_history.py  orchestrator.py  phase.py  preflight.py  review_store.py  state.py  summary.py  telemetry.py  wake_lock.py
src/aidor/agent_templates/: agents_md_block.md  aidor-coder.md  aidor-reviewer.md
src/aidor/policies/: allowed_exceptions.yml  question_classes.yml  shell_allowlist.yml  tool_allowlist.yml
src/aidor/resources/: __init__.py  aidor_runtime_agents.md
tests/: conftest.py  fake_copilot.py  test_bootstrap.py  test_cli.py  test_cli_phase_extra.py  test_docs_quality_gates.py  test_effort.py  test_extra_instructions.py  test_guard_profile.py  test_hook_resolver.py  test_hook_resolver_extra.py  test_misc_coverage.py  test_model_history.py  test_orchestrator_integration.py  test_orchestrator_prompt.py  test_phase_watchdog.py  test_precommit_shim.py  test_preflight.py  test_review_store.py  test_shell_allowlist.py  test_state.py  test_state_validation_extra.py  test_summary.py  test_telemetry.py  test_test_placement_rule.py  test_tool_allowlist.py  test_wake_lock.py
