[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aidor"
version = "0.1.0"
description = "AI Review Orchestrator — drives a coder LLM and a reviewer LLM through GitHub Copilot CLI in an automated review/fix loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aidor contributors" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",  # used by notify/telegram in v1.1; tiny dep
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
aidor = "aidor.cli:app"
aidor-hook = "aidor.hook_resolver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aidor"]

[tool.hatch.build.targets.wheel.force-include]
"src/aidor/agent_templates" = "aidor/agent_templates"
"src/aidor/policies" = "aidor/policies"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/aidor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
