[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aidor"
version = "0.1.0"
description = "AI Review Orchestrator — drives a coder LLM and a reviewer LLM through GitHub Copilot CLI in an automated review/fix loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aidor contributors" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",  # used by notify/telegram in v1.1; tiny dep
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "ruff>=0.5",
]

[project.scripts]
aidor = "aidor.cli:app"
aidor-hook = "aidor.hook_resolver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aidor"]

[tool.hatch.build.targets.wheel.force-include]
"src/aidor/agent_templates" = "aidor/agent_templates"
"src/aidor/policies" = "aidor/policies"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/aidor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", ".aidor", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter, plenty of long URLs/strings in tests
    "B008",  # function call in default argument — typer pattern
    "SIM102", # nested-if combine — sometimes harms readability
    "SIM105", # contextlib.suppress — defensive nested try/except is intentional in places
    "SIM117", # combine nested with — sometimes harms readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine
