[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aidor"
version = "0.1.0"
description = "AI Review Orchestrator — drives a coder LLM and a reviewer LLM through GitHub Copilot CLI in an automated review/fix loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aidor contributors" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "ruff>=0.5",
]

[project.scripts]
aidor = "aidor.cli:app"
aidor-hook = "aidor.hook_resolver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aidor"]

[tool.hatch.build.targets.wheel.force-include]
"src/aidor/agent_templates" = "aidor/agent_templates"
"src/aidor/policies" = "aidor/policies"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/aidor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
# Enforce the repo's non-negotiable ≥90% line-coverage policy from AGENTS.md.
# CI and the pre-commit hook fail when coverage drops below this floor.
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", ".aidor", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
# Every entry below has a matching human-approved justification in
# `.aidor/allowed_exceptions.yml` — that file is the source of truth for
# lint-rule exceptions (see AGENTS.md). Do not add new ignores here without
# adding a corresponding entry there first.
ignore = [
    "E501",   # long URLs/strings; the formatter handles code width
    "B008",   # typer uses `typer.Option(...)` in default args by design
    "SIM102", # combined `if` statements sometimes harm readability
    "SIM105", # defensive nested try/except is intentional in places
    "SIM117", # combined `with` statements sometimes harm readability
]

[tool.ruff.lint.per-file-ignores]
# Approved via .aidor/allowed_exceptions.yml (scope: tests only).
"tests/*" = ["B011"]  # bare `assert` is idiomatic in pytest
